colang-cli/tests/samples/features/traits/compile_error/name_conflict_with_struct.co
struct Foo { }

trait Foo { }

fun main() { }
